# api/surgeon-wl.openapi.yaml
@@ -4,20 +4,22 @@ servers:
     url: /api
 info:
   description: Surgeons List for Web-In-Cloud system
-  version: '1.0.0'
+  version: "1.0.0"
   title: Waiting List Api
   contact:
     email: tomas.nemec1999@gmail.com
   license:
     name: CC BY 4.0
-    url: 'https://creativecommons.org/licenses/by/4.0/'
+    url: "https://creativecommons.org/licenses/by/4.0/"
 tags:
   - name: surgeriesList
     description: Surgeries List API
   - name: oepratedLimbs
     description: specific locations that can be operated
+  - name: surgeons
+    description: Surgeons details
 paths:
-  '/surgeries-list/{surgeonId}/entries':
+  "/surgeries-list/{surgeonId}/entries":
     get:
       tags:
         - surgeriesList
@@ -32,18 +34,18 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: value of the surgeries list entries
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/SurgeryEntry'
+                  $ref: "#/components/schemas/SurgeryEntry"
               examples:
                 response:
-                  $ref: '#/components/examples/SurgeryEntriesExample'
-        '404':
+                  $ref: "#/components/examples/SurgeryEntriesExample"
+        "404":
           description: Surgeon with such ID does not exist
     post:
       tags:
@@ -62,30 +64,30 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SurgeryEntry'
+              $ref: "#/components/schemas/SurgeryEntry"
             examples:
               request-sample:
-                $ref: '#/components/examples/SurgeryEntriesExample'
+                $ref: "#/components/examples/SurgeryEntriesExample"
         description: Surgery entry to store
         required: true
       responses:
-        '200':
+        "200":
           description: >-
             Value of the surgery entry
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SurgeryEntry'
+                $ref: "#/components/schemas/SurgeryEntry"
               examples:
                 updated-response:
-                  $ref: '#/components/examples/SurgeryEntriesExample'
-        '400':
+                  $ref: "#/components/examples/SurgeryEntriesExample"
+        "400":
           description: Missing mandatory properties of input object.
-        '404':
+        "404":
           description: Surgeon with such ID does not exists
-        '409':
+        "409":
           description: Entry with the specified id already exists
-  '/surgeries-list/{surgeonId}/entries/{entryId}':
+  "/surgeries-list/{surgeonId}/entries/{entryId}":
     get:
       tags:
         - surgeriesList
@@ -108,16 +110,16 @@ paths:
           schema:
             type: string
       responses:
-        '200':
+        "200":
           description: value of the surgery list entries
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SurgeryEntry'
+                $ref: "#/components/schemas/SurgeryEntry"
               examples:
                 response:
-                  $ref: '#/components/examples/SurgeryEntryExample'
-        '404':
+                  $ref: "#/components/examples/SurgeryEntryExample"
+        "404":
           description: Surgeon or Entry with such ID does not exists
     put:
       tags:
@@ -142,29 +144,29 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/SurgeryEntry'
+              $ref: "#/components/schemas/SurgeryEntry"
             examples:
               request:
-                $ref: '#/components/examples/SurgeryEntryExample'
+                $ref: "#/components/examples/SurgeryEntryExample"
         description: Waiting list entry to update
         required: true
       responses:
-        '200':
+        "200":
           description: >-
             value of the surgeries list entry with re-computed estimated time of
             surgeon entry
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/SurgeryEntry'
+                $ref: "#/components/schemas/SurgeryEntry"
               examples:
                 response:
-                  $ref: '#/components/examples/SurgeryEntryExample'
-        '403':
+                  $ref: "#/components/examples/SurgeryEntryExample"
+        "403":
           description: >-
             Value of the entryID and the data id is mismatching. Details are
             provided in the response body.
-        '404':
+        "404":
           description: Surgeon or Entry with such ID does not exists
     delete:
       tags:
@@ -186,11 +188,11 @@ paths:
           schema:
             type: string
       responses:
-        '204':
+        "204":
           description: Item deleted
-        '404':
+        "404":
           description: Surgeon or Entry with such ID does not exists
-  '/surgeries-list/operatedLimbList':
+  "/surgeries-list/operatedLimbList":
     get:
       tags:
         - surgeryOperatedLimb
@@ -198,17 +200,68 @@ paths:
       operationId: getOperatedLimbList
       description: Get a list of predefined operated limbs applicable to surgeries
       responses:
-        '200':
+        "200":
           description: value of the predefined operated limbs
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/OperatedLimb'
+                  $ref: "#/components/schemas/OperatedLimb"
               examples:
                 response:
-                  $ref: '#/components/examples/OperatedLimbsListExample'
+                  $ref: "#/components/examples/OperatedLimbsListExample"
+  "/surgeon":
+    post:
+      tags:
+        - surgeons
+      summary: Saves new surgeon
+      operationId: createSurgeon
+      description: Use this method to initialize new surgeon in the system
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Surgeon"
+            examples:
+              request-sample:
+                $ref: "#/components/examples/SurgeonExample"
+        description: surgeon details to store
+        required: true
+      responses:
+        "200":
+          description: >-
+            Value of stored surgeon
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Surgeon"
+              examples:
+                updated-response:
+                  $ref: "#/components/examples/SurgeonExample"
+        "400":
+          description: Missing mandatory properties of input object.
+        "409":
+          description: Entry with the specified id already exists
+  "/surgeon/{surgeonId}":
+    delete:
+      tags:
+        - surgeons
+      summary: Deletes specific surgeon
+      operationId: deleteSurgeon
+      description: Use this method to delete the specific surgeon from the system.
+      parameters:
+        - in: path
+          name: surgeonId
+          description: pass the id of the particular surgeon
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: Item deleted
+        "404":
+          description: Surgeon with such ID does not exist
 components:
   schemas:
     SurgeryEntry:
@@ -237,11 +290,11 @@ components:
           type: string
           example: Surgery was successful without any complication
         operatedLimb:
-          $ref: '#/components/schemas/OperatedLimb'
+          $ref: "#/components/schemas/OperatedLimb"
       example:
-        $ref: '#/components/examples/SurgeryEntryExample'
+        $ref: "#/components/examples/SurgeryEntryExample"
     OperatedLimb:
-      description: 'Location on body that was operated'
+      description: "Location on body that was operated"
       required:
         - value
       properties:
@@ -252,7 +305,25 @@ components:
           type: string
           example: Left hand
       example:
-        $ref: '#/components/examples/OperatedLimbExample'
+        $ref: "#/components/examples/OperatedLimbExample"
+    Surgeon:
+      type: object
+      required: ["id", "name"]
+      properties:
+        id:
+          type: string
+          example: dentist-warenova
+          description: Unique identifier of the ambulance
+        name:
+          type: string
+          example: Mudr. Andrej Poljak
+          description: Human readable name of the surgeon
+        surgeriesList:
+          type: array
+          items:
+            $ref: "#/components/schemas/SurgeryEntry"
+      example:
+        $ref: "#/components/examples/SurgeonExample"
   examples:
     SurgeryEntryExample:
       summary: Ľudomír Zlostný waiting
@@ -317,3 +388,29 @@ components:
           code: Left leg
         - value: Prava noha
           code: Right leg
+    SurgeonExample:
+      summary: Sample GP surgeon
+      description: |
+        Example of GP surgeon with surgeries
+      value:
+        id: xpoljako
+        name: Mudr. Andrej Poljak
+        surgeriesList:
+          - id: x321ab3
+            surgeonId: xpoljako
+            patientId: 74895-ludomir-zlostny
+            date: 2024-05-24
+            successful: True
+            surgeryNote: Vsetko prebehlo podla planu
+            operatedLimb:
+              value: Lava ruka
+              code: Left hand
+          - id: x456cd3
+            surgeonId: xpoljako
+            patientId: 74895-vaclav-gyorgi
+            date: 2024-05-11
+            successful: False
+            surgeryNote: Stratil 4 prsty na nohe
+            operatedLimb:
+              value: Prava noha
+              code: Right leg
